# QT-medical

./: CMakeLists.txt
QtGuiApp/: CMakeLists.txt
QtGuiApp/src/: MainWindow.cpp  MainWindow.h  main.cpp
VtkAPP/: CMakeLists.txt
VtkAPP/src/: VtkApp_Export.h  VtkDemoClass.cpp  VtkDemoClass.h
ui/: MainWindow.ui
